--- a/prima_sia.html
+++ b/prima_sia.html
@@ -23,12 +23,10 @@
       <h1>1^Asia 4.0</h1><br>
       <h2>Cos'è la prima SIA 4.0?</h2><br>
       <p>la classe prima SIA 4.0 è una classe sperimentale, dove il corso Sistemi Informativi Aziendali partirà dalla
-        prima superiore e non dalla terza<br>
-        oltre ad avere un'ora in più di matematica e informatica, dunque ti offre una migliore preparazione, ogni studente
-        avrà a disposizione un Ipad <br>
-        con i libri di teso in formato digitale.<br>Come già detto, per chi è interessato a frequentare questo corso, sarà
-        vantaggioso partire dalla prima superiore<br>
-        in quanto si avrà la possibilità di avere delle buone basi in informatica e vi permetterà di proseguire con il
+        prima superiore e non dalla terza.<br>
+        oltre ad avere un'ora in più di matematica e informatica, offrendoti una migliore preparazione, ogni studente
+        avrà a disposizione un Ipad contenente i libri di testo in formato digitale.<br>Come già detto, per chi è interessato a frequentare questo corso, sarà
+        vantaggioso partire dalla prima superiore in quanto si avrà la possibilità di avere delle buone basi in informatica e vi permetterà di proseguire con il
         vostro percorso in maniera più semplice.</p>
     </div>
   </div>
