--- a/scelta.html
+++ b/scelta.html
@@ -30,7 +30,7 @@
         proprie passioni e desideri
         <br>-ciò che si vuole fare una volta finite le scuole superiori (lavoro/università)<br><br>Se i tuoi interessi si
         orientano verso
-        l'informatica, l'economia aziendale, la matematica, molto probabilmente il corso SIA potrebbe essere rientrare
+        l'informatica, l'economia aziendale, la matematica, molto probabilmente il corso SIA potrebbe rientrare
         nelle possibili scelte
         che potresti effettuare, però attenzione, non scegliere questo corso se pensi che sia facile perchè devi studiare
         una lingua in meno
@@ -66,7 +66,7 @@
         in quanto il loro scopo è quello di insegnare, dunque se vuoi scegliere una scuola dove "si studia poco" o "si fa
         poco", prova a chiederti quale sarebbe una scuola dove potresti ottenere buoni risultati
         ma senza doverti sforzare troppo nello studio.<br><br>
-        Quando scegli una scuola devi anche mettere in conto il tuo metodo di studio, se si tratta di una metologia che
+        Quando scegli una scuola devi anche mettere in conto il tuo metodo di studio, se si tratta di una metodologia che
         segue il ragionamento logico, dove riesci ad organizzare le idee
         in modo efficiente, il SIA potrebbe essere adatto a te, potresti viverlo in maniera più leggera in quanto sarai
         più agevolato nello studio, sia dell'informatica, sia della matematica e dell'economia aziendale.
