--- a/index.html
+++ b/index.html
@@ -1,110 +1,152 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>SIA</title>
+        <link rel="stylesheet" type="text/css" href="layout_index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body class="box">
+        <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
+        <div class="d-none d-xxl-block">
+                <div class="z-n1 position-absolute"><img src="immagini/earth.png" class="earth img-fluid"></div>
+                <!--scrolling image-->
+                <img class="scrolling-image img-fluid" src="immagini/palazzi2.png" alt="Scrolling Image">
+                <script>
+                    document.addEventListener("DOMContentLoaded", function () {
+                        var scrollingImage = document.querySelector(".scrolling-image");
+                        var imagePosition2 = scrollingImage.getBoundingClientRect().top;
+                        var lastScrollPosition = 0;
 
-<head>
-  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width,initial-scale=1">-->
-  <title>SIA</title>
-  <link rel="stylesheet" type="text/css" href="style_index.css" />
-</head>
+                    window.addEventListener("scroll", function () {
+                        var scrollPosition = window.scrollY;
+                        var windowHeight = window.innerHeight;
+                        var currentScrollPosition = window.scrollY;
 
-<body>
-  <nav>
-    <a href="index.html"> <img src="immagini/icons8-code-50-(3).png" /> </a>
-    <div class="menu-options">
-      <span class="word-offset"><a href="prima_sia.html">1^Asia</a></span>
-      <span class="word-offset"><a href="scelta.html">Scelta Scolastica</a></span>
-      <span class="word-offset"><a href="#">About</a></span>
-    </div>
-  </nav>
-  <!--<img src="palazzi2.png" class="palazzi">-->
-  <img class="scrolling-image" src="immagini/palazzi2.png" alt="Scrolling Image" /> <!--immagine a cui verrà applicata poi la funzione-->
+                    if (currentScrollPosition > lastScrollPosition) {
+                        // Stai scrollando verso il basso
+                        imagePosition2 = 1 + scrollPosition;
+                    } else if (currentScrollPosition < lastScrollPosition) {
+                        // Stai scrollando verso l'alto
+                        imagePosition2 = scrollPosition - 1;
+                    }
 
-  <!--
-    funzione java script che calcola la posizione dell'immagine che scrollerà (palazzi.png) e in base ad essa poi verrà 
-    calcolata l'opacità e verrà fatta scendere verso il basso o salire verso l'alto
-  -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var scrollingImage = document.querySelector(".scrolling-image");
-      var imagePosition2 = scrollingImage.getBoundingClientRect().top;
-      var lastScrollPosition = 0;
+                    // Calcola la posizione dell'immagine in base allo scrolling
+                    var imagePosition = windowHeight - scrollPosition;
 
-      window.addEventListener("scroll", function () {
-        var scrollPosition = window.scrollY;
-        var windowHeight = window.innerHeight;
-        var currentScrollPosition = window.scrollY;
+                    // Imposta l'opacità in base alla posizione dell'immagine
+                    scrollingImage.style.opacity = imagePosition / windowHeight;
 
-        if (currentScrollPosition > lastScrollPosition) {
-          // Stai scrollando verso il basso
-          imagePosition2 = 1 + scrollPosition;
-        } else if (currentScrollPosition < lastScrollPosition) {
-          // Stai scrollando verso l'alto
-          imagePosition2 = scrollPosition - 1;
-        }
+                    lastScrollPosition = currentScrollPosition;
 
-        // Calcola la posizione dell'immagine in base allo scrolling
-        var imagePosition = windowHeight - scrollPosition;
+                    // effetto di traslazione per movimento più fluido
+                    //scrollingImage.style.transform = 'translateY(' + imagePosition2 / 2 + 'px)';
+                    scrollingImage.style.transform =
+                    "translateY(" + imagePosition2 + "px)";
+                        });
+                    });
+                </script>
+                    <nav class="navbar fixed-top">
+                            <a href="index.html" class="collegamento"> <img src="immagini/icons8-code-50-(3).png" class="ms-5 mt-4" /> </a>
+                            <div class="menu-options">
+                                <span class="word-offset"><a href="prima_sia.html" class="collegamento">1^Asia</a></span>
+                                <span class="word-offset"><a href="scelta.html" class="collegamento">Scelta Scolastica</a></span>
+                            </div>
+                        </nav>
+                        <h1 class="titolo-principale" style="padding-top:95px">
+                            <label style="color: rgb(0, 197, 241)">S</label>istemi
+                            <label style="color: rgb(0, 197, 241)">I</label>nformativi
+                            <br>
+                            <label style="color: rgb(0, 197, 241)">A</label>ziendali
+                        </h1>
+                    <div class="container p-0">
+                        <div class="row" style="margin-top:600px">
+                            <div class="col-3"></div>
+                            <div class="col-6 boxtesto">
+                                <h3 class="testo">
+                                Hai un interesse per la tecnologia e per la risoluzione di problemi? <br>
+                                Ti ritieni una persona creativa?  
+                                </h3>
+                                <div class="row">
+                                    <div class="col-6"></div>
+                                    <div class="col-6">
+                                        <h6 class="testo">
+                                        [Per avere informazioni sulla classe prima SIA 4.0 <a href="primasia.html">Clicca qui</a>]
+                                        </h6>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h5 class="testo">
+                                        I pilastri del corso sono l'economia aziendale e l'informatica, lo studio dell'informatica è ciò che la differenzia dagli altri corsi.
+                                        Se le risposte alle prime due domande sono "si" il corso SIA potrebbe essere fatto per te, questo corso rispetto agli altri è incentrato 
+                                        sulle competenze riguardante il problem solving (=capacità di risoluzione dei problemi) e il ragionamento logico 
+                                        applicate all'economia aziendale.
+                                        Aiuta i suoi studenti a raggiungere una formazione ricca e completa incline alla tecnologia e alle sue metodologia più attuali mantenendo
+                                        anche il profilo economico aziendale, inoltre ti fornisce le basi per poter utilizzare la tecnologia in modo creativo e innovativo.
+                                        I macroargomenti affrontati nel percorso informatico del Sia sono i seguenti:
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>    
+                        </div>
+                    </div>
+                    <div class="container-fluid m-0">
+                            <div class="row mt-5">
+                            <div class="col-12 p-0"><img src="immagini/uml_spiegazioni_sistemato.png" class="img-fluid"></div>
+                            <div class="col-12 p-0"><img src="immagini/uml_2_spiegazioni_sistemato.png" class="img-fluid"></div>
+                        </div>
+                    </div>
+                    
+        </div>
 
-        // Imposta l'opacità in base alla posizione dell'immagine
-        scrollingImage.style.opacity = imagePosition / windowHeight;
-
-        lastScrollPosition = currentScrollPosition;
-
-        // effetto di traslazione per movimento più fluido
-        //scrollingImage.style.transform = 'translateY(' + imagePosition2 / 2 + 'px)';
-        scrollingImage.style.transform =
-          "translateY(" + imagePosition2 + "px)";
-      });
-    });
-  </script>
-
-  <br /><br />
-  <!--ogni lettera iniziale differisce di colore dalle altre per evidenziare la sigla "SIA"-->
-  <h1 class="titolo-principale">
-    <label style="color: rgb(0, 197, 241)">S</label>istemi
-    <label style="color: rgb(0, 197, 241)">I</label>nformativi<br /><label
-      style="color: rgb(0, 197, 241)">A</label>ziendali
-  </h1>
-  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-  
-  <!--breve presentazione del sia-->
-  <!--<div class="testo">
-    <pre>
-          <h2>
-      Hai un interesse per la tecnologia e per la risoluzione di problemi?
-      Ti ritieni una persona creativa?</h2>
-         Per avere informazioni sulla classe prima SIA 4.0 <a href="prima_sia.html">clicca qui</a><h3>
-       I pilastri del corso sono l'economia aziendale e l'informatica, lo studio dell'informatica è ciò che la differenzia dagli altri corsi.
-       Se le risposte alle prime due domande sono "si" il corso SIA potrebbe essere fatto per te, questo corso rispetto agli altri è incentrato 
-       sulle competenze riguardante il problem solving (=capacità di risoluzione dei problemi) e il ragionamento logico applicate all'economia 
-       aziendale. Aiuta i suoi studenti a raggiungere una formazione ricca e completa incline alla tecnologia e alle sue metodologia più attuali
-       mantenendo anche il profilo economico, inoltre ti fornisce le basi per poter utilizzare la tecnologia in modo creativo e innovativo.                   
-       I macroargomenti affrontati nel percorso informatico del Sia sono i seguenti:
-          </h3></pre>
-  </div>-->
-  <div class="testo">
-    <h2>
-    Hai un interesse per la tecnologia e per la risoluzione di problemi?<br>Ti ritieni una persona creativa?
-    </h2>
-    <p>
-    <i style="font-size: small;">[Per avere informazioni sulla classe prima SIA 4.0 <a href="prima_sia.html">clicca qui</a>]</i>
-    <br>
-    <br>
-    I pilastri del corso sono l'economia aziendale e l'informatica, lo studio dell'informatica è ciò che la differenzia dagli altri corsi.
-    Se le risposte alle prime due domande sono "si" il corso SIA potrebbe essere fatto per te, questo corso rispetto agli altri è incentrato 
-    sulle competenze riguardante il problem solving (=capacità di risoluzione dei problemi) e il ragionamento logico applicate all'economia 
-    aziendale. Aiuta i suoi studenti a raggiungere una formazione ricca e completa incline alla tecnologia e alle sue metodologia più attuali
-    mantenendo anche il profilo economico, inoltre ti fornisce le basi per poter utilizzare la tecnologia in modo creativo e innovativo.                   
-    I macroargomenti affrontati nel percorso informatico del Sia sono i seguenti:
-    </p>
-  </div>
-  <br /><br /><br />
-
-  <!--prof mi perdoni ma ero di fretta e quindi ho trovato la soluzione più veloce-->
-  <img src="immagini/uml_spiegazioni_sistemato.png" class="immagine" />
-  <img src="immagini/uml_2_spiegazioni_sistemato.png" class="immagine" />
-  <br />
-</body>
-
+        <!-- ANY OTHER SCREEN-->
+        <div class="d-xxl-none h-100 boxsmallsc">
+            <div class="container-fluid h-100">
+                <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
+                    <div>
+                        <div class="row mt-5">
+                            <ul class="nav nav-underline justify-content-center mt-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="index.html" style="color:white">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="prima_sia.html" style="color:white">1^Asia</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="scelta.html" style="color:white">Scelta</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="row">
+                            <div class="col-1"></div>
+                            <div class="col-10">
+                                <h6 class="titolo-princ-smallsc">
+                                    <label style="color: rgb(0, 197, 241)">S</label>istemi
+                                    <label style="color: rgb(0, 197, 241)">I</label>nformativi
+                                    <br>
+                                    <label style="color: rgb(0, 197, 241)">A</label>ziendali
+                                </h6>
+                            </div>
+                            <div class="col-1"></div>
+                        </div>
+                        <div class="row" style="margin-top: 50px;">
+                            <div class="col-2"></div>
+                            <div class="col-8 boxtestosmallsc">
+                                <p class="testosmallsc">
+                                    I pilastri del corso sono l'economia aziendale e l'informatica, lo studio dell'informatica è ciò che la differenzia dagli altri corsi.
+                                    Questo corso rispetto agli altri è incentrato sulle competenze riguardante il problem solving (=capacità di risoluzione dei problemi) e il ragionamento logico 
+                                    applicate all'economia aziendale.
+                                    Aiuta i suoi studenti a raggiungere una formazione ricca e completa incline alla tecnologia e alle sue metodologia più attuali mantenendo
+                                    anche il profilo economico aziendale, inoltre ti fornisce le basi per poter utilizzare la tecnologia in modo creativo e innovativo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-auto"><img src="immagini/palazzi2.png" class="img-fluid"></div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
