--- a/prima_sia.html
+++ b/prima_sia.html
@@ -1,36 +1,76 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>1^Asia</title>
+        <link rel="stylesheet" type="text/css" href="style_index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body class="box sfondo">
 
-<head>
-  <title>1^Asia 4.0</title>
-  <link rel="stylesheet" type="text/css" href="style_scelta.css">
-</head>
+        <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
+        <div class="d-none d-xxl-block">
+            <div class="container-fluid h-100"> 
+                <nav class="navbar fixed-top">
+                    <a href="index.html" class="collegamento"> <img src="immagini/icons8-code-50-(3).png" class="ms-5 mt-4" /> </a>
+                    <div class="menu-options">
+                        <span class="word-offset"><a href="prima_sia.html" class="collegamento">1^Asia</a></span>
+                        <span class="word-offset"><a href="scelta.html" class="collegamento">Scelta Scolastica</a></span>
+                    </div>
+                </nav> 
+                <div class="row" style="padding-top:150px">
+                    <div class="col-3"></div>
+                    <div class="col-6 testo boxtesto" style="margin-top: 70px;">
+                        <h1>1^Asia 4.0</h1><br>
+                        <h2>Cos'è la prima SIA 4.0?</h2><br>
+                        <p>la classe prima SIA 4.0 è una classe sperimentale, il corso Sistemi Informativi Aziendali partirà dalla
+                            prima superiore e non dalla terza.<br>
+                            oltre ad avere un'ora in più di matematica e informatica, offrendoti una migliore preparazione, ogni studente
+                            avrà a disposizione un Ipad contenente i libri di testo in formato digitale.<br>Come già detto, per chi è interessato a frequentare questo corso, sarà
+                            vantaggioso partire dalla prima superiore in quanto si avrà la possibilità di avere delle buone basi in informatica e vi permetterà di proseguire con il
+                            vostro percorso in modo più efficace.</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+            </div>
+        </div>
 
-<body>
-  <nav>
-    <a href="index.html"> <img src="immagini/icons8-code-50-(3).png"> </a>
-    <div class="menu-options">
-      <span class="word-offset"><a href="prima_sia.html">1^Asia</a></span>
-      <span class="word-offset"><a href="scelta.html">Scelta Scolastica</a></span>
-      <span class="word-offset"><a href="#">About</a></span>
-    </div>
-  </nav>
-  <br><br><br><br><br><br>
-  
-  <!--modificare ciò che è da modificare e aggiungere un'immagine alla fine-->
-  <div class="centered">
-    <div class="contenuto">
-      <h1>1^Asia 4.0</h1><br>
-      <h2>Cos'è la prima SIA 4.0?</h2><br>
-      <p>la classe prima SIA 4.0 è una classe sperimentale, il corso Sistemi Informativi Aziendali partirà dalla
-        prima superiore e non dalla terza.<br>
-        oltre ad avere un'ora in più di matematica e informatica, offrendoti una migliore preparazione, ogni studente
-        avrà a disposizione un Ipad contenente i libri di testo in formato digitale.<br>Come già detto, per chi è interessato a frequentare questo corso, sarà
-        vantaggioso partire dalla prima superiore in quanto si avrà la possibilità di avere delle buone basi in informatica e vi permetterà di proseguire con il
-        vostro percorso in modo più efficace.</p>
-    </div>
-  </div>
-
-</body>
-
+        <!-- ANY OTHER SCREEN-->
+        <div class="d-xxl-none h-100 boxsmallsc">
+            <div class="container-fluid h-100">
+                <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
+                    <div>
+                        <div class="row mt-5">
+                            <ul class="nav nav-underline justify-content-center mt-3">
+                                <li class="nav-item">
+                                <a class="nav-link" href="index.html" style="color:white">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="prima_sia.html" style="color:white">1^Asia</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="scelta.html" style="color:white">Scelta</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="row" style="margin-top: 50px;">
+                            <div class="col-2"></div>
+                            <div class="col-8 boxtestosmallsc testosmallsc">
+                                <h2>1^Asia 4.0</h2><br>
+                                <h3>Cos'è la prima SIA 4.0?</h3><br>
+                                <p>la classe prima SIA 4.0 è una classe sperimentale, il corso Sistemi Informativi Aziendali partirà dalla
+                                    prima superiore e non dalla terza.<br>
+                                    oltre ad avere un'ora in più di matematica e informatica, offrendoti una migliore preparazione, ogni studente
+                                    avrà a disposizione un Ipad contenente i libri di testo in formato digitale.<br>Come già detto, per chi è interessato a frequentare questo corso, sarà
+                                    vantaggioso partire dalla prima superiore in quanto si avrà la possibilità di avere delle buone basi informatiche permettendovi di proseguire con il
+                                    vostro percorso in modo più efficace.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-auto"><img src="immagini/palazzi2.png" class="img-fluid"></div>
+            </div> 
+        </div>
+    </body>
 </html>
