--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="box">
         <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
-        <div class="d-none d-xxl-block">
+        <div class="d-none d-lg-block">
                 <div class="z-n1 position-absolute"><img src="immagini/earth.png" class="earth img-fluid"></div>
                 <!--scrolling image-->
                 <img class="scrolling-image img-fluid" src="immagini/palazzi2.png" alt="Scrolling Image">
@@ -102,7 +102,7 @@
         </div>
 
         <!-- ANY OTHER SCREEN-->
-        <div class="d-xxl-none h-100 boxsmallsc">
+        <div class="d-lg-none h-100 boxsmallsc">
             <div class="container-fluid h-100">
                 <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
                     <div>
@@ -144,6 +144,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="container-fluid m-0">
+                        <div class="row mt-5">
+                        <div class="col-12 p-0"><img src="immagini/uml_spiegazioni_sistemato.png" class="img-fluid"></div>
+                        <div class="col-12 p-0"><img src="immagini/uml_2_spiegazioni_sistemato.png" class="img-fluid"></div>
+                    </div>
+                </div>
                     <div class="mt-auto"><img src="immagini/palazzi2.png" class="img-fluid"></div>
                 </div>
             </div>
