--- a/prima_sia.html
+++ b/prima_sia.html
@@ -10,7 +10,7 @@
     <body class="box sfondo">
 
         <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
-        <div class="d-none d-xxl-block">
+        <div class="d-none d-lg-block">
             <div class="container-fluid h-100"> 
                 <nav class="navbar fixed-top">
                     <a href="index.html" class="collegamento"> <img src="immagini/icons8-code-50-(3).png" class="ms-5 mt-4" /> </a>
@@ -37,7 +37,7 @@
         </div>
 
         <!-- ANY OTHER SCREEN-->
-        <div class="d-xxl-none h-100 boxsmallsc">
+        <div class="d-lg-none h-100 boxsmallsc">
             <div class="container-fluid h-100">
                 <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
                     <div>
