--- a/scelta.html
+++ b/scelta.html
@@ -9,7 +9,7 @@
     </head>
     <body class="box">
         <!-- VISIBILE SOLO SU SCHERMI XXL QUINDI ≥1400px -->
-        <div class="d-none d-xxl-block">
+        <div class="d-none d-lg-block">
             <div class="container-fluid"> 
                 <div class="z-n1 position-absolute fixed-top"><img src="immagini/earth.png" class="earth img-fluid"></div>
                     <nav class="navbar fixed-top">
@@ -79,7 +79,7 @@
         </div>
 
         <!-- ANY OTHER SCREEN-->
-        <div class="d-xxl-none h-100 boxsmallsc">
+        <div class="d-lg-none h-100 boxsmallsc">
             <div class="container-fluid h-100">
                 <div class="d-flex align-items-start flex-column h-100" style="color:#FFF">
                     <div>
